--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "binance-proxy",
+  "name": "mert-binance-proxy",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
