--- a/package.json
+++ b/package.json
@@ -1,16 +1,7 @@
 {
-  "name": "mert-binance-proxy",
+  "name": "mert-vercel-proxy",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
-    "axios": "^1.6.7",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "axios": "^1.6.7"
   }
 }
