--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mert-vercel-proxy",
+  "name": "mert-binance-proxy",
   "version": "1.0.0",
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.8"
   }
 }
